Bug 397958 - Impossible to use knsrc file for uploads from non standard location
Summary: Impossible to use knsrc file for uploads from non standard location
Status: RESOLVED FIXED
Alias: None
Product: frameworks-knewstuff
Classification: Frameworks and Libraries
Component: general (other bugs)
Version First Reported In: 5.49.0
Platform: Other All
: NOR normal
Target Milestone: ---
Assignee: Jeremy Whiting
URL:
Keywords:
: 386678 (view as bug list)
Depends on:
Blocks: 397112
  Show dependency treegraph
 
Reported: 2018-08-27 22:40 UTC by Ralf Habacker
Modified: 2018-09-13 17:41 UTC (History)
2 users (show)

See Also:
Latest Commit:
Version Fixed/Implemented In: 5.51
Sentry Crash Report:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Ralf Habacker 2018-08-27 22:40:06 UTC
KNS3::UploadDialog() does not support loading knsrc files from a custom location

How to reproduce:
1. compile knewstuff
2. run <build-dir>/bin/khotnewstuff_upload <knew-stuff-source-dir>/tests/khotnewstuff_upload.knsrc

What happens:
The test case prints "No knsrc file named '<knew-stuff-source-dir>/tests/khotnewstuff_upload.knsrc' was found."

What is expected:
The test case should read the specified file

Additional informations:
KNS3::DownloadDialog() does not have this problem. It could load a knsrc file from any location.
Comment 1 Ralf Habacker 2018-09-13 14:34:02 UTC
For the related review request see https://phabricator.kde.org/D15481
Comment 2 Ralf Habacker 2018-09-13 15:31:34 UTC
Git commit b6a52eef1ab66984795cc4089c78195b7513443f by Ralf Habacker.
Committed on 13/09/2018 at 15:31.
Pushed by habacker into branch 'master'.

Fix 'Impossible to use knsrc file for uploads from non standard location'

Test Plan: build and did run test case on linux
Reviewed By: whiting
Differential Revision: https://phabricator.kde.org/D15481
FIXED-IN:5.51

M  +13   -9    src/uploaddialog.cpp

https://commits.kde.org/knewstuff/b6a52eef1ab66984795cc4089c78195b7513443f
Comment 3 Ralf Habacker 2018-09-13 17:41:05 UTC
*** Bug 386678 has been marked as a duplicate of this bug. ***