Fix 'Impossible to use knsrc file for uploads from non standard location'

Test Plan: build and did run test case on linux
Reviewed By: whiting
Differential Revision: https://phabricator.kde.org/D15481
FIXED-IN:5.51
BUG:397958